# project-report

./: .buildinfo  .cruft.json  .env.template  .envrc  .gitignore  .releaserc.yaml  Pipfile  README.md  binder_requirements.py  conf.py  flexlate.json  genindex.html  index.html  mypy.ini  name.py  nb-examples.sh  objects.inv  package-lock.json  package.json  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py  sitemap.xml  test-requirements.txt  tutorial.html
_modules/: index.html
_sources/: index.rst.txt  tutorial.rst.txt
_static/: documentation_options.js
api/: modules.html  projectreport.analyzer.html  projectreport.analyzer.parsers.html  projectreport.analyzer.parsers.multi.html  projectreport.analyzer.parsers.python.html  projectreport.analyzer.ts.html  projectreport.finder.html  projectreport.html  projectreport.license.html  projectreport.report.html  projectreport.searcher.html  projectreport.tools.html
auto_examples/: index.html
binder/: requirements.txt
docs/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  tutorial.html
docsrc/: Makefile  autobuild.sh  binder_requirements.sh
nbexamples/: ipynb_to_gallery.py
project-report/: README.md  conf.py  flexlate.json
projectreport/: __init__.py  config.py  constants.py  data.py  logger.py  parser_types.py  version.py
tests/: base.py  config.py  dirutils.py  generate_reports.py  github_stub.py  test_finder.py  test_license.py  (+5 more)
tests/input_data/python_examples/setup_cfg/: __init__.py  license.txt  setup.cfg
(+164 files in other folders)
