[metadata]
version = 1.0.0
description = "[from setup.cfg] An example Python package for testing purposes (version from setup.cfg)"
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Testing
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities